--- a/kickers/app/src/main/res/layout/activity_players.xml
+++ b/kickers/app/src/main/res/layout/activity_players.xml
@@ -8,8 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".PlayersActivity">
 
-    <fragment
-        android:name="com.performgroup.innovation.kickers.ui.fragment.PickPlayerFragment"
+    <FrameLayout
+        android:id="@+id/fragment_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_pick_players" />
