--- a/kickers/app/src/main/res/layout/dialog_create_player.xml
+++ b/kickers/app/src/main/res/layout/dialog_create_player.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -20,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="@string/player_name" />
+        android:hint="@string/player_name"
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/b_save"
