--- a/kickers/app/src/main/res/layout/activity_match.xml
+++ b/kickers/app/src/main/res/layout/activity_match.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:boxpoints="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/football_field_background"
@@ -17,12 +17,12 @@
             android:id="@+id/bp_blue_points"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:background="@drawable/box_points_background"
             android:divider="@android:color/transparent"
             android:dividerHeight="1dp"
-            android:layout_centerInParent="true"
-            boxpoints:teamColor="Blue"
-            boxpoints:inverted="true"/>
+            boxpoints:inverted="true"
+            boxpoints:teamColor="Blue" />
 
     </RelativeLayout>
 
@@ -50,17 +50,25 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <com.performgroup.innovation.kickers.ui.customview.PlayerButtonTop
+            <com.performgroup.innovation.kickers.ui.customview.PlayerButton
                 android:id="@+id/tv_player_red_deffender_name"
+                style="@style/match_field_player_red_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                tools:text="Player 1" />
 
-            <com.performgroup.innovation.kickers.ui.customview.PlayerButtonTop
+            <com.performgroup.innovation.kickers.ui.customview.PlayerButton
                 android:id="@+id/tv_player_red_attacker_name"
+                style="@style/match_field_player_red_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                tools:text="Player 2" />
 
         </LinearLayout>
 
@@ -72,19 +80,25 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <com.performgroup.innovation.kickers.ui.customview.PlayerButtonBottom
+            <com.performgroup.innovation.kickers.ui.customview.PlayerButton
                 android:id="@+id/tv_player_blue_deffender_name"
+                style="@style/match_field_player_blue_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <com.performgroup.innovation.kickers.ui.customview.PlayerButtonBottom
-                android:id="@+id/tv_player_blue_attacker_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
+                tools:text="Player 1" />
 
-                />
+            <com.performgroup.innovation.kickers.ui.customview.PlayerButton
+                android:id="@+id/tv_player_blue_attacker_name"
+                style="@style/match_field_player_blue_name"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                tools:text="Player 1" />
 
         </LinearLayout>
 
@@ -92,9 +106,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@color/match_info_background"
+            android:background="@drawable/match_status_background"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tv_match_number"
@@ -151,12 +165,12 @@
             android:id="@+id/bp_red_points"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:background="@drawable/box_points_background"
             android:divider="@android:color/transparent"
             android:dividerHeight="1dp"
-            android:layout_centerInParent="true"
-            boxpoints:teamColor="Red"
-            boxpoints:inverted="false"/>
+            boxpoints:inverted="false"
+            boxpoints:teamColor="Red" />
 
     </RelativeLayout>
 
