--- a/kickers/app/src/main/res/values/styles.xml
+++ b/kickers/app/src/main/res/values/styles.xml
@@ -17,7 +17,6 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-
     <style name="match_field_player_name">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
@@ -25,11 +24,13 @@
     </style>
 
     <style name="match_field_player_red_name" parent="match_field_player_name">
-        <item name="android:background">@color/red_team_color</item>
+        <item name="android:background">@drawable/player_button_red_selector</item>
+        <item name="android:layout_margin">2dp</item>
     </style>
 
     <style name="match_field_player_blue_name" parent="match_field_player_name">
-        <item name="android:background">@color/blue_team_color</item>
+        <item name="android:background">@drawable/player_button_blue_selector</item>
+        <item name="android:layout_margin">2dp</item>
     </style>
 
     <style name="Area" parent="Theme.AppCompat.Light">
