--- a/kickers/app/src/main/res/values/styles.xml
+++ b/kickers/app/src/main/res/values/styles.xml
@@ -42,4 +42,8 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="list_header_small">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
