--- a/kickers/app/src/main/res/layout/available_players_item.xml
+++ b/kickers/app/src/main/res/layout/available_players_item.xml
@@ -7,6 +7,14 @@
     android:padding="8dp"
     android:weightSum="5">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/team_member_unselected"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
+        />
+
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
@@ -14,13 +22,5 @@
         android:layout_gravity="center_vertical"
         android:layout_weight="3"
         tools:text="Player one" />
-
-    <ImageButton
-        android:id="@+id/ib_add_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="2"
-        android:src="@android:drawable/ic_input_add" />
 
 </LinearLayout>
