--- a/kickers/app/src/main/res/layout/dialog_create_player.xml
+++ b/kickers/app/src/main/res/layout/dialog_create_player.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/team"
+        android:layout_gravity="center"/>
+
     <TextView
         android:id="@+id/tv_match_finished_title"
         android:layout_width="match_parent"
@@ -20,13 +26,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="@string/player_name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        />
 
     <Button
         android:id="@+id/b_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="@string/save_player" />
+        android:text="@string/save_player"
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
