--- a/kickers/app/src/main/res/layout/dialog_match_finished.xml
+++ b/kickers/app/src/main/res/layout/dialog_match_finished.xml
@@ -3,23 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/football_field_background"
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/tv_match_finished_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:padding="10dp"
+        android:paddingBottom="10dp"
         android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
-        tools:text="Red team wins!" />
+        android:text="@string/match_statistics" />
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_separator"
@@ -30,6 +32,7 @@
             android:padding="10dp"
             android:text=":"
             android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@android:color/white"
             android:textStyle="bold" />
 
         <TextView
@@ -64,16 +67,31 @@
             android:id="@+id/tl_match_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="5dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableLayout
+            android:id="@+id/tl_players_statistics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:padding="5dp" />
 
     </RelativeLayout>
 
     <Button
         android:id="@+id/b_goto_next_match"
+        style="@style/normal_button_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:text="@string/goto_next_match" />
 
 </LinearLayout>
