--- a/kickers/app/src/main/res/values/styles.xml
+++ b/kickers/app/src/main/res/values/styles.xml
@@ -5,6 +5,13 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="normal_button_style">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/normal_button_selector</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
     <style name="score_info">
         <item name="android:textAppearance">?android:textAppearanceLarge</item>
         <item name="android:textStyle">bold</item>
