App style improvments. Introduced API-21 elements.

--- a/kickers/app/src/main/res/layout/activity_players.xml
+++ b/kickers/app/src/main/res/layout/activity_players.xml
@@ -2,16 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/football_field_background"
+    android:padding="8dp"
     tools:context=".PlayersActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/t_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize" />
 
     <FrameLayout
         android:id="@+id/fragment_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/t_toolbar"
         tools:layout="@layout/fragment_pick_players" />
 
 </RelativeLayout>
