--- a/kickers/app/src/main/res/layout/dialog_create_player.xml
+++ b/kickers/app/src/main/res/layout/dialog_create_player.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    android:orientation="vertical">
+    android:background="@color/football_field_background"
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/tv_match_finished_title"
@@ -13,6 +14,7 @@
         android:padding="10dp"
         android:text="@string/create_player_title"
         android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@android:color/white"
         android:textStyle="bold" />
 
     <ImageView
@@ -29,11 +31,12 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/player_name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/b_save"
-        style="@style/normal_button_style"
+        style="@style/button_normal_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
