--- a/kickers/app/src/main/res/layout/dialog_register_goal.xml
+++ b/kickers/app/src/main/res/layout/dialog_register_goal.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/football_field_background"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -13,6 +14,7 @@
         android:gravity="center_horizontal"
         android:padding="10dp"
         android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         tools:text="Register goal for Player 1" />
 
@@ -47,7 +49,7 @@
 
     <Button
         android:id="@+id/b_register_goal"
-        style="@style/normal_button_style"
+        style="@style/button_normal_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_goal" />
