--- a/kickers/app/src/main/res/values/colors.xml
+++ b/kickers/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="button_green">#4f9d28</color>
     <color name="button_green_highlighted">#5cb82f</color>
     <color name="button_green_disabled">#b0b0b0</color>
+    <color name="button_red">#d90a0a</color>
+    <color name="button_red_highlighted">#ff0e0e</color>
 
 </resources>
