--- a/kickers/app/src/main/res/values/styles.xml
+++ b/kickers/app/src/main/res/values/styles.xml
@@ -1,13 +1,20 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="normal_button_style">
+    <style name="button_play_style">
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:background">@drawable/normal_button_selector</item>
+        <item name="android:background">@drawable/button_play_selector</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
+    <style name="button_normal_style">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/button_normal_selector</item>
         <item name="android:padding">15dp</item>
         <item name="android:layout_margin">2dp</item>
     </style>
@@ -31,19 +38,13 @@
     </style>
 
     <style name="match_field_player_red_name" parent="match_field_player_name">
-        <item name="android:background">@drawable/player_button_red_selector</item>
+        <item name="android:background">@drawable/button_player_red_selector</item>
         <item name="android:layout_margin">2dp</item>
     </style>
 
     <style name="match_field_player_blue_name" parent="match_field_player_name">
-        <item name="android:background">@drawable/player_button_blue_selector</item>
+        <item name="android:background">@drawable/button_player_blue_selector</item>
         <item name="android:layout_margin">2dp</item>
-    </style>
-
-    <style name="Area" parent="Theme.AppCompat.Light">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="game_rules_item">
@@ -51,10 +52,12 @@
     </style>
 
     <style name="list_header_small">
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="goal_dialog_item">
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:layout_margin">10dp</item>
     </style>
