--- a/kickers/app/src/main/res/layout/activity_match.xml
+++ b/kickers/app/src/main/res/layout/activity_match.xml
@@ -99,11 +99,10 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 tools:text="Player 1" />
-
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@drawable/match_status_background"
@@ -112,11 +111,44 @@
 
             <TextView
                 android:id="@+id/tv_match_number"
-                style="@style/score_info"
+                style="@style/score_team_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 tools:text="Match 1 / 5" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_team_separator"
+                    style="@style/score_team_info_small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/score_separator"
+                    tools:text=" vs " />
+
+                <TextView
+                    android:id="@+id/tv_team_one_name"
+                    style="@style/score_team_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/tv_team_separator"
+                    android:layout_toStartOf="@id/tv_team_separator"
+                    tools:text="team One" />
+
+                <TextView
+                    android:id="@+id/tv_team_two_name"
+                    style="@style/score_team_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/tv_team_separator"
+                    android:layout_toRightOf="@id/tv_team_separator"
+                    tools:text="Team Two" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
