--- a/kickers/app/src/main/res/layout/dialog_register_goal.xml
+++ b/kickers/app/src/main/res/layout/dialog_register_goal.xml
@@ -50,6 +50,7 @@
     <Button
         android:id="@+id/b_register_goal"
         style="@style/button_normal_style"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_goal" />
