--- a/kickers/app/src/main/res/layout/rules_item.xml
+++ b/kickers/app/src/main/res/layout/rules_item.xml
@@ -3,7 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="20dp"
+    >
 
     <ImageView
         android:id="@+id/iv_rule_icon"
