--- a/kickers/app/src/main/res/layout/fragment_pick_players.xml
+++ b/kickers/app/src/main/res/layout/fragment_pick_players.xml
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="@string/start_playing" />
+            android:text="@string/next" />
 
         <ListView
             android:id="@+id/lv_chosen_players"
